--- a/client/package.json
+++ b/client/package.json
@@ -4,17 +4,21 @@
   "main": "expo-router/entry",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
+    "@react-native-async-storage/async-storage": "^2.1.0",
+    "@react-native-firebase/app": "^21.6.1",
+    "@react-native-google-signin/google-signin": "^13.1.0",
     "@react-navigation/bottom-tabs": "^7.0.0",
     "@react-navigation/native": "^7.0.0",
     "axios": "^1.7.9",
-    "expo": "~52.0.15",
+    "expo": "^52.0.20",
     "expo-app-loading": "^2.1.1",
+    "expo-auth-session": "^6.0.1",
     "expo-blur": "~14.0.1",
     "expo-constants": "~17.0.3",
     "expo-dev-client": "~5.0.5",
@@ -22,8 +26,8 @@
     "expo-haptics": "~14.0.0",
     "expo-linking": "~7.0.3",
     "expo-location": "~18.0.3",
-    "expo-router": "~4.0.11",
-    "expo-splash-screen": "~0.29.13",
+    "expo-router": "^4.0.14",
+    "expo-splash-screen": "^0.29.18",
     "expo-status-bar": "~2.0.0",
     "expo-symbols": "~0.2.0",
     "expo-system-ui": "~4.0.5",
@@ -31,7 +35,7 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-hook-form": "^7.53.2",
-    "react-native": "0.76.3",
+    "react-native": "^0.76.5",
     "react-native-fontext": "^0.1.8",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-reanimated": "~3.16.1",
