--- a/client/app.json
+++ b/client/app.json
@@ -16,7 +16,7 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/images/adaptive-icon.png",
         "backgroundColor": "#ffffff"
-      },
+      }
     },
     "web": {
       "bundler": "metro",
@@ -24,6 +24,12 @@
       "favicon": "./assets/images/favicon.png"
     },
     "plugins": [
+      [
+        "@react-native-google-signin/google-signin",
+        {
+          "iosUrlScheme": "com.googleusercontent.apps.846065075010-its3uresv6ueijejsnhjvtetpoqo49s3"
+        }
+      ],
       "expo-router",
       [
         "expo-splash-screen",
@@ -48,7 +54,7 @@
     "extra": {
       "router": {
         "origin": false
-      },
+      }
     }
   }
 }
