--- a/client/app.json
+++ b/client/app.json
@@ -16,7 +16,12 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/images/adaptive-icon.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "permissions": [
+        "android.permission.ACCESS_COARSE_LOCATION",
+        "android.permission.ACCESS_FINE_LOCATION"
+      ],
+      "package": "com.carbonal.app"
     },
     "web": {
       "bundler": "metro",
@@ -54,6 +59,9 @@
     "extra": {
       "router": {
         "origin": false
+      },
+      "eas": {
+        "projectId": "4bc43b0b-99c6-4d85-a7a4-5fd169882d2b"
       }
     }
   }
