--- a/server/.env
+++ b/server/.env
@@ -1,1 +1,2 @@
 MONGODB_URI="mongodb+srv://abhijith18765mongodb:lpsSSQ3jWMZMNKDb@carbonal.y3oio.mongodb.net/?retryWrites=true&w=majority&appName=Carbonal"
+JWT_SECRET="my_secret"
