--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 # Learn more https://docs.github.com/en/get-started/getting-started-with-git/ignoring-files
-./server/.env.*
+client/.env
+server/.env
 
 # dependencies
 node_modules/
